# aethergraph

./: .env.example  .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  README.md  aethergraph_docs_context_skills.txt  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: 0_quick_start.py  README.md
scripts/: build_and_upload_pypi.py  conda_download_test.py  smoke_build_and_install.py
skills/aethergraph-agent-graph-fastbuild/: SKILL.md
skills/aethergraph-agent-graph-fastbuild/agents/: openai.yaml
skills/aethergraph-agent-graph-fastbuild/references/: examples.md  node_context_services.md  primitives.md  run_and_server.md
skills/aethergraph-codex-graph-builder/: SKILL.md
skills/aethergraph-codex-graph-builder/agents/: openai.yaml
skills/aethergraph-codex-graph-builder/references/: artifact_patterns.md  graphify_rules.md  run_and_register.md  validation_and_registration.md
skills/docstring-format-enforcer/: SKILL.md
src/aethergraph/: __init__.py  __main__.py  runner.py
src/aethergraph/api/v1/: __init__.py  agents.py  apps.py  artifacts.py  auth.py  channels.py  deps.py  graphs.py  identity.py  input_schema.py  inspect.py  memory.py  misc.py  pagination.py  registry.py  registry_helpers.py  router.py  run_presenters.py  runs.py  schemas.py  session.py  settings.py  stats.py  triggers.py  viz.py
src/aethergraph/api/v1_legacy_20260302/: apps.py  (+6 more)
src/aethergraph/cli/: __init__.py  common.py  http.py  load.py  main.py  output.py
src/aethergraph/config/: config.py  context.py  dotenv_writer.py  llm.py  loader.py  runtime.py  search.py  storage.py
src/aethergraph/runner/: __init__.py
src/aethergraph/runtime/: __init__.py
src/aethergraph/server/: __init__.py  app_factory.py  loading.py  server.py  server_state.py  start.py
src/aethergraph/services/: __init__.py
src/aethergraph/storage/: factory.py  fs_utils.py  search_factory.py
src/aethergraph/tools/: __init__.py
src/aethergraph/utils/: optdeps.py
tests/: test_agent_state_facade.py  test_apps_api.py  test_artifact_occurrence_api.py  test_artifacts_api.py  test_auth_demo_flow.py  test_channel_client.py  test_channel_endpoint.py  test_channel_incoming.py  test_channel_session_dashboard_state.py  test_channel_session_resume.py  test_channel_session_run_card.py  test_channel_session_work_status.py  test_dualstage_channel.py  test_eventlog_metering.py  test_graph_conditions.py  test_graph_endpoints.py  test_graph_fn_runtime_refactor.py  test_graph_runner_dx.py  test_graph_runner_resume.py  test_graph_state_store.py  test_graphify_fail_fast_validation.py  test_harness.py  test_inmem_run_store.py  test_input_schema_api.py  test_inspect_api.py  test_llm_chat_contract.py  test_llm_observability.py  test_memory_api.py  test_memory_event_ordering.py  test_memory_facade_prompt_context.py  test_node_context_injection.py  test_registration_manifest_store.py  test_registration_service.py  test_registry_api.py  test_run_manager.py  test_run_manager_rate_limit.py  test_runs_api.py  test_session_title_inference_api.py  test_slack_extra.py  test_smoke.py  (+4 more)
tests/cli/: test_cli_main.py  test_register_cli.py  test_run_cli.py  test_serve_cli.py
(+421 files in other folders)
